<resources>
    <string name="app_name">CoreUtils</string>
    <string name="loader_background">loader background</string>
    <string name="disabled_view">disabled view</string>
    <string name="powered_by">Powered by</string>
    <string name="powered_by_author">Powered by %s</string>
    <string name="version_launcher">ver. %s</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_dismiss_snackbar">Dismiss</string>
    <string name="btn_confirm">Yes, continue</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_take_photo_from_camera">Take photo from camera</string>
    <string name="btn_select_image_form_gallery">Select image form gallery</string>
    <string name="avatar">avatar</string>
    <string name="close">Close</string>
    <string name="trash">Trash</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="exit_app_title">Exit</string>
    <string name="exit_app_message">Do you want to leave TinySips?</string>
    <string name="yes_sure">Yes, I\'m sure</string>
    <string name="dialog_title_default">Dialog Title</string>
    <string name="dialog_default_accept">Accept</string>
    <string name="dialog_default_cancel">Cancel</string>
    <string name="dialog_default_action">Action</string>
    <string name="needs_correction_fields">Some information needs a minor correction before we continue</string>
    <string name="the_camera_has_not_been_detected">The camera has not been detected.</string>
    <string name="file_provider_not_defined">The "file_paths.xml" file has not been defined</string>
    <string name="error_input_type_number">Only numbers and a maximum of %d characters.</string>
    <string name="error_input_type_string_simple">Only letters, numbers and a maximum of %d characters.</string>
    <string name="error_input_type_string_full">Any value and a maximum of %d characters.</string>
    <string name="default_edit_text_hint">Enter text</string>
    <string name="default_color_hint">Color</string>
    <string name="default_image_hint">Image</string>
    <string name="content_description_collapse">collapse</string>
    <string name="content_description_preview_gallery">preview</string>
    <string name="content_description_preview_camera">preview</string>
    <string name="content_description_reset">reset</string>
    <string name="content_description_clear">clear</string>
    <string name="content_description_minimized">color minimized</string>
    <string name="field_required">Required</string>
</resources>