<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_between_components_form_min" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background_8_stroke_pink_light"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imagePreview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/padding_image_selector_component"
                        android:layout_weight="1"
                        android:scaleType="centerCrop" />

                    <ImageButton
                        android:id="@+id/btn_preview_gallery"
                        style="@style/Theme.Kore.ImageButton.Left"
                        android:contentDescription="@string/btn_select_image_form_gallery"
                        android:padding="9dp"
                        app:srcCompat="@drawable/ic_img" />

                    <ImageButton
                        android:id="@+id/btn_preview_camera"
                        style="@style/Theme.Kore.ImageButton.Right"
                        android:contentDescription="@string/btn_take_photo_from_camera"
                        app:srcCompat="@drawable/ic_camera" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/required_warning_label"
                style="@style/Theme.Kore.FieldRequiredText"
                android:text="@string/field_required" />
        </LinearLayout>

        <include
            android:id="@+id/disabled_view"
            layout="@layout/disabled_overlay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>